Update terminology and improve clarity across multiple components
- Replaced instances of "practitioner" with "expert" in various files to enhance consistency in terminology.
- Updated fallback metadata in the page component to reflect the change from "practitioner" to "expert" for improved clarity.
- Revised descriptions in email templates and messages to align with the new terminology, ensuring a cohesive user experience.
- Adjusted legal agreements and privacy policies to use "expert" instead of "practitioner," maintaining consistency across documentation.

--- a/content/about/br.mdx
+++ b/content/about/br.mdx
@@ -85,7 +85,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     },
     {
       paragraph:
-        'Hoje, a Eleva Care opera um marketplace digital seguro que conecta mulheres a profissionais independentes e licenciados. Nós fornecemos a tecnologia; o profissional que você escolhe oferece o atendimento.',
+        'Hoje, a Eleva Care opera um plataforma digital seguro que conecta mulheres a profissionais independentes e licenciados. Nós fornecemos a tecnologia; o profissional que você escolhe oferece o atendimento.',
     },
   ]}
   ctaText="Leia nossa história"
