--- a/content/about/en.mdx
+++ b/content/about/en.mdx
@@ -15,7 +15,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
   id="transforming-women-healthcare"
   headingLevel="h1"
   title="Transforming women's health with compassion and proven care"
-  description="We’re here to make it easier to find the right help, at the right moment. Eleva Care connects you with licensed healthcare professionals through a secure, trusted technology platform."
+  description="We're here to make it easier to find the right help, at the right moment. Eleva Care connects you with licensed care experts through a secure, trusted technology platform."
 />
 
 <MissionSection
@@ -23,11 +23,11 @@ import TeamSection from '@/components/organisms/about/TeamSection';
   description={[
     {
       paragraph:
-        'We believe every woman deserves access to knowledgeable, compassionate care. Our platform helps you find independent, licensed practitioners you can trust—so you feel supported at every step.',
+        'We believe every woman deserves access to knowledgeable, compassionate care. Our platform helps you find independent, licensed experts you can trust—so you feel supported at every step.',
     },
     {
       paragraph:
-        'We provide the technology that makes care simpler to access. Your chosen practitioner provides your medical care. Together, we help you move forward with confidence.',
+        'We provide the technology that makes care simpler to access. Your chosen expert provides your medical care. Together, we help you move forward with confidence.',
     },
   ]}
   statsTitle="The numbers"
@@ -84,7 +84,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     },
     {
       paragraph:
-        'Today, Eleva Care operates a secure digital marketplace that connects women with independent, licensed practitioners. We provide the technology; your chosen practitioner provides your care.',
+        'Today, Eleva Care operates a secure digital platform that connects women with independent, licensed care experts. We provide the technology; your chosen expert provides your care.',
     },
   ]}
   ctaText="Read our story"
@@ -189,7 +189,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
   id="join-our-network"
   label="Join our network"
   title="Transform women's healthcare with us"
-  description="Join a community of dedicated healthcare professionals making quality care accessible to women everywhere."
+  description="Join a community of dedicated care professionals making quality care accessible to women everywhere."
 />
 
 <JoinNetworkSection
