--- a/content/about/es.mdx
+++ b/content/about/es.mdx
@@ -15,7 +15,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
   id="transforming-women-healthcare"
   headingLevel="h1"
   title="Transformando la salud de la mujer con compasión y cuidado basado en evidencia"
-  description="Estamos aquí para facilitarte encontrar la ayuda adecuada, en el momento justo. Eleva Care te conecta con profesionales de salud con licencia mediante una plataforma segura y confiable."
+  description="Estamos aquí para facilitarte encontrar la ayuda adecuada, en el momento justo. Eleva Care te conecta con especialistas con licencia mediante una plataforma segura y confiable."
 />
 
 <MissionSection
@@ -27,7 +27,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     },
     {
       paragraph:
-        'Nosotros ponemos la tecnología que facilita el acceso al cuidado. Tu profesional elegido ofrece tu atención médica. Juntos, te ayudamos a avanzar con confianza.',
+        'Nosotros ponemos la tecnología que facilita el acceso al cuidado. Tu especialista elegido ofrece tu atención médica. Juntos, te ayudamos a avanzar con confianza.',
     },
   ]}
   statsTitle="Los números"
@@ -85,7 +85,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     },
     {
       paragraph:
-        'Hoy, Eleva Care opera un marketplace digital seguro que conecta a mujeres con profesionales independientes y con licencia. Nosotros ponemos la tecnología; tu profesional elegido brinda tu atención.',
+        'Hoy, Eleva Care opera un plataforma digital seguro que conecta a mujeres con profesionales independientes y con licencia. Nosotros ponemos la tecnología; tu especialista elegido brinda tu atención.',
     },
   ]}
   ctaText="Lee nuestra historia"
