--- a/content/about/pt.mdx
+++ b/content/about/pt.mdx
@@ -84,7 +84,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     },
     {
       paragraph:
-        'Hoje, a Eleva Care opera um marketplace digital seguro que liga mulheres a profissionais independentes e licenciados. Nós fornecemos a tecnologia; o(a) profissional que escolhe presta os seus cuidados.',
+        'Hoje, a Eleva Care opera um plataforma digital seguro que liga mulheres a profissionais independentes e licenciados. Nós fornecemos a tecnologia; o(a) profissional que escolhe presta os seus cuidados.',
     },
   ]}
   ctaText="Leia a nossa história"
