--- a/content/dpa/br.mdx
+++ b/content/dpa/br.mdx
@@ -6,7 +6,7 @@ Este DPA explica como a Eleva.care trata dados pessoais—de forma clara e simpl
 
 ## 1) Quem faz o quê
 
-- A Eleva.care é um marketplace tecnológico em saúde. Não somos provedor de saúde.
+- A Eleva.care é um plataforma tecnológica em saúde. Não somos provedor de saúde.
 - Dois papéis:
   - Controlador (operações da plataforma: contas, agendamentos, pagamentos, analytics, suporte)
   - Operador (notas/arquivos clínicos criados por profissionais: armazenamos com segurança conforme instruções)
@@ -20,9 +20,9 @@ Este DPA explica como a Eleva.care trata dados pessoais—de forma clara e simpl
   - Analytics: PostHog (opção de hospedagem UE)
 - Exigimos DPAs/SCCs, controles de segurança e residência de dados na UE sempre que possível.
 
-## 3) Quando somos Operador (para profissionais)
+## 3) Quando somos Operador (para especialistas)
 
-- Os profissionais são Controladores dos dados clínicos; nós somos Operador.
+- Os especialistas são Controladores dos dados clínicos; nós somos Operador.
 - Agimos apenas sob instruções documentadas, criptografamos dados (em trânsito e em repouso) e aplicamos RBAC e logs de auditoria.
 - Suboperadores para dados clínicos (UE): Neon (DB Frankfurt), Vercel (hosting UE), Upstash (cache UE). Notificamos alterações.
 
@@ -39,12 +39,12 @@ Este DPA explica como a Eleva.care trata dados pessoais—de forma clara e simpl
 ## 6) Retenção e eliminação
 
 - Dados de plataforma: apenas o necessário ou exigido por lei
-- Dados clínicos: retenção definida pelo profissional (p. ex., 10 anos em PT). Em término/instrução, exportamos e excluímos após período de carência e janela de backups.
+- Dados clínicos: retenção definida pelo especialista (p. ex., 10 anos em PT). Em término/instrução, exportamos e excluímos após período de carência e janela de backups.
 
 ## 7) Direitos dos titulares
 
 - Plataforma (Controlador): Tratamos acesso, retificação, exclusão, portabilidade, limitação e oposição.
-- Clínico (Operador): Oferecemos ferramentas para que os profissionais cumpram solicitações dos pacientes.
+- Clínico (Operador): Oferecemos ferramentas para que os especialistas cumpram solicitações dos pacientes.
 
 ## 8) Deveres do profissional (como Controlador)
 
@@ -58,7 +58,7 @@ Este DPA explica como a Eleva.care trata dados pessoais—de forma clara e simpl
 ## 10) Responsabilidade
 
 - Eleva.care: responsável pela tecnologia e segurança descritas
-- Profissionais: responsáveis por decisões clínicas, resultados e conformidade como Controladores
+- Especialistas: responsáveis por decisões clínicas, resultados e conformidade como Controladores
 
 ## 11) Atualizações, lei e disputas
 
