--- a/content/dpa/es.mdx
+++ b/content/dpa/es.mdx
@@ -6,7 +6,7 @@ Este DPA explica cómo Eleva.care trata los datos personales—de forma clara y 
 
 ## 1) Quién hace qué
 
-- Eleva.care es un marketplace tecnológico en salud. No somos proveedor de salud.
+- Eleva.care es un plataforma tecnológica en salud. No somos proveedor de salud.
 - Dos roles:
   - Responsable (operaciones de plataforma: cuentas, reservas, pagos, analítica, soporte)
   - Encargado (notas/archivos clínicos creados por profesionales: almacenamos de forma segura bajo sus instrucciones)
@@ -20,9 +20,9 @@ Este DPA explica cómo Eleva.care trata los datos personales—de forma clara y 
   - Analítica: PostHog (opción de hosting UE)
 - Exigimos DPAs/SCCs, controles de seguridad y residencia en la UE cuando sea posible.
 
-## 3) Cuando somos Encargado (para profesionales)
+## 3) Cuando somos Encargado (para especialistas)
 
-- Los profesionales son Responsables de los datos clínicos; nosotros somos Encargado.
+- Los especialistas son Responsables de los datos clínicos; nosotros somos Encargado.
 - Actuamos solo con instrucciones documentadas, ciframos datos (en tránsito y en reposo), y mantenemos RBAC y logs de auditoría.
 - Subencargados para datos clínicos (UE): Neon (DB Frankfurt), Vercel (hosting UE), Upstash (cache UE). Notificamos cambios.
 
@@ -44,7 +44,7 @@ Este DPA explica cómo Eleva.care trata los datos personales—de forma clara y 
 ## 7) Derechos de titulares
 
 - Plataforma (Responsable): Atendemos acceso, rectificación, borrado, portabilidad, limitación y oposición.
-- Clínico (Encargado): Damos herramientas para que los profesionales atiendan solicitudes de pacientes.
+- Clínico (Encargado): Damos herramientas para que los especialistas atiendan solicitudes de pacientes.
 
 ## 8) Deberes del profesional (como Responsable)
 
@@ -58,7 +58,7 @@ Este DPA explica cómo Eleva.care trata los datos personales—de forma clara y 
 ## 10) Responsabilidad
 
 - Eleva.care: responsable por la plataforma y seguridad descritas
-- Profesionales: responsables por decisiones clínicas, resultados y cumplimiento como Responsables
+- Especialistas: responsables por decisiones clínicas, resultados y cumplimiento como Responsables
 
 ## 11) Actualizaciones, ley y disputas
 
