--- a/content/dpa/pt.mdx
+++ b/content/dpa/pt.mdx
@@ -6,7 +6,7 @@ Este DPA explica como a Eleva.care trata dados pessoais—de forma clara e simpl
 
 ## 1) Quem faz o quê
 
-- A Eleva.care é um marketplace tecnológico em saúde. Não somos prestador de saúde.
+- A Eleva.care é um plataforma tecnológica em saúde. Não somos prestador de saúde.
 - Dois papéis:
   - Responsável (operações de plataforma: contas, marcações, pagamentos, analítica, suporte)
   - Subcontratante (notas/ficheiros clínicos criados por profissionais: armazenamos em segurança sob instruções)
@@ -20,9 +20,9 @@ Este DPA explica como a Eleva.care trata dados pessoais—de forma clara e simpl
   - Analítica: PostHog (opção de hosting UE)
 - Exigimos DPAs/SCCs, controlos de segurança e residência de dados na UE sempre que possível.
 
-## 3) Quando somos Subcontratante (para profissionais)
+## 3) Quando somos Subcontratante (para especialistas)
 
-- Os profissionais são Responsáveis pelos dados clínicos; nós somos Subcontratante.
+- Os especialistas são Responsáveis pelos dados clínicos; nós somos Subcontratante.
 - Atuamos apenas com instruções documentadas, ciframos dados (em trânsito e em repouso) e aplicamos RBAC e logs de auditoria.
 - Subprocessadores para dados clínicos (UE): Neon (DB Frankfurt), Vercel (hosting UE), Upstash (cache UE). Notificamos alterações.
 
@@ -39,12 +39,12 @@ Este DPA explica como a Eleva.care trata dados pessoais—de forma clara e simpl
 ## 6) Retenção e eliminação
 
 - Dados de plataforma: apenas o necessário ou exigido por lei
-- Dados clínicos: retenção definida pelo profissional (p. ex., 10 anos em PT). Em término/instrução, exportamos e eliminamos após período de graça e janela de backups.
+- Dados clínicos: retenção definida pelo especialista (p. ex., 10 anos em PT). Em término/instrução, exportamos e eliminamos após período de graça e janela de backups.
 
 ## 7) Direitos dos titulares
 
 - Plataforma (Responsável): Tratamos acesso, retificação, apagamento, portabilidade, limitação e oposição.
-- Clínico (Subcontratante): Fornecemos ferramentas para que os profissionais cumpram pedidos dos pacientes.
+- Clínico (Subcontratante): Fornecemos ferramentas para que os especialistas cumpram pedidos dos pacientes.
 
 ## 8) Deveres do profissional (como Responsável)
 
@@ -58,7 +58,7 @@ Este DPA explica como a Eleva.care trata dados pessoais—de forma clara e simpl
 ## 10) Responsabilidade
 
 - Eleva.care: responsável pela tecnologia e segurança descritas
-- Profissionais: responsáveis por decisões clínicas, resultados e conformidade enquanto Responsáveis
+- Especialistas: responsáveis por decisões clínicas, resultados e conformidade enquanto Responsáveis
 
 ## 11) Atualizações, lei e litígios
 
