--- a/content/expert-agreement/en.mdx
+++ b/content/expert-agreement/en.mdx
@@ -6,7 +6,7 @@ Welcome to Eleva.care. This agreement explains, in plain language, how we work t
 
 ## 1) Your status (independent professional)
 
-- You are an independent, licensed healthcare professional—not our employee, partner, or agent
+- You are an independent, licensed care professional—not our employee, partner, or agent
 - You run your own practice: schedule, rates, policies, taxes, insurance, and regulatory compliance are yours to manage
 - We don’t supervise your clinical decisions or provide medical services
 
@@ -52,7 +52,7 @@ We do not provide medical advice or supervision, verify your credentials (you se
 
 ## 8) Term and termination
 
-- Starts when your practitioner account is created and continues until either of us ends it
+- Starts when your expert account is created and continues until either of us ends it
 - You can close your account; complete/cancel booked visits and meet record‑keeping duties
 - We may suspend/terminate for license issues, fraud/illegality, serious misconduct, or policy breaches
 - Upon termination, we provide an export of your data; you remain responsible for legally required retention
