--- a/content/payment-policies/br.mdx
+++ b/content/payment-policies/br.mdx
@@ -6,12 +6,12 @@ Aqui explicamos como funcionam os pagamentos na Eleva.care de forma simples.
 
 ## 1) Pelo que você está pagando
 
-- A Eleva.care é um marketplace tecnológico. Os pagamentos vão para profissionais independentes e licenciados pelos seus serviços.
+- A Eleva.care é um plataforma confiável. Os pagamentos vão para profissionais independentes e licenciados pelos seus serviços.
 - O preço exibido inclui tudo (sem custos ocultos):
-  - O profissional recebe 85% do preço da consulta
+  - O especialista recebe 85% do preço da consulta
   - A Eleva.care retém 15% como taxa de plataforma (tecnologia, infraestrutura, suporte, marketing, taxas Stripe)
 
-Exemplo €100: Profissional €85, Taxa de plataforma €15.
+Exemplo €100: Especialista €85, Taxa de plataforma €15.
 
 ## 2) Métodos de pagamento
 
@@ -25,7 +25,7 @@ Exemplo €100: Profissional €85, Taxa de plataforma €15.
 - Você tem 7 dias completos para concluir o pagamento
 - Enviaremos lembretes no dia 3 e no dia 6 com instruções (caixa eletrônico, internet banking, MB WAY)
 
-Pagamentos Multibanco tardios (após 7 dias): se o horário não estiver mais disponível ou violar regras do profissional, reembolsamos automaticamente 90% e retemos 10% como taxa de processamento.
+Pagamentos Multibanco tardios (após 7 dias): se o horário não estiver mais disponível ou violar regras do especialista, reembolsamos automaticamente 90% e retemos 10% como taxa de processamento.
 
 ## 4) Reembolsos por conflitos (Multibanco tardio)
 
@@ -42,11 +42,11 @@ Se houver erro do sistema ou caso especial, contate o suporte em 48 h com sua re
 - Multibanco (janela de 7 dias):
   - Melhor para 8+ dias, preferência local PT e pagamento diferido
 
-## 6) Pagamentos a profissionais (Stripe Connect)
+## 6) Pagamentos a especialistas (Stripe Connect)
 
 - Profissionais são independentes e recebem via Stripe Connect após consultas concluídas
-- Divisão padrão: 85% profissional / 15% plataforma
-- O prazo depende das configurações do profissional e do banco
+- Divisão padrão: 85% especialista / 15% plataforma
+- O prazo depende das configurações do especialista e do banco
 
 ## 7) Moeda e preços
 
