--- a/content/payment-policies/es.mdx
+++ b/content/payment-policies/es.mdx
@@ -6,12 +6,12 @@ Aquí explicamos cómo funcionan los pagos en Eleva.care en lenguaje claro.
 
 ## 1) Qué está pagando
 
-- Eleva.care es un marketplace tecnológico. Los pagos van a profesionales independientes y licenciados por sus servicios.
+- Eleva.care es un plataforma confiable. Los pagos van a profesionales independientes y licenciados por sus servicios.
 - El precio mostrado incluye todo (sin cargos ocultos):
-  - El profesional recibe el 85% del precio de la cita
+  - El especialista recibe el 85% del precio de la cita
   - Eleva.care retiene el 15% como tarifa de plataforma (tecnología, infraestructura, soporte, marketing, tarifas Stripe)
 
-Ejemplo €100: Profesional €85, Tarifa de plataforma €15.
+Ejemplo €100: Especialista €85, Tarifa de plataforma €15.
 
 ## 2) Métodos de pago
 
@@ -25,7 +25,7 @@ Ejemplo €100: Profesional €85, Tarifa de plataforma €15.
 - Tiene 7 días completos para completar el pago
 - Enviaremos recordatorios en el día 3 y día 6 con instrucciones (cajero, banca en línea, MB WAY)
 
-Pagos Multibanco tardíos (después de 7 días): Si el horario ya no está disponible o infringe reglas del profesional, reembolsamos automáticamente el 90% y retenemos un 10% como tarifa de procesamiento.
+Pagos Multibanco tardíos (después de 7 días): Si el horario ya no está disponible o infringe reglas del especialista, reembolsamos automáticamente el 90% y retenemos un 10% como tarifa de procesamiento.
 
 ## 4) Reembolsos por conflictos (Multibanco tardío)
 
@@ -42,11 +42,11 @@ Si hubo un error del sistema o caso especial, contacte con soporte dentro de 48 
 - Multibanco (ventana de 7 días):
   - Mejor para citas con 8+ días, preferencia local PT, cómodo con pago diferido
 
-## 6) Pagos a profesionales (Stripe Connect)
+## 6) Pagos a especialistas (Stripe Connect)
 
-- Los profesionales son independientes y se pagan vía Stripe Connect tras citas exitosas
-- Distribución estándar: 85% profesional / 15% plataforma
-- El tiempo de transferencia depende de la configuración del profesional y del banco
+- Los especialistas son independientes y se pagan vía Stripe Connect tras citas exitosas
+- Distribución estándar: 85% especialista / 15% plataforma
+- El tiempo de transferencia depende de la configuración del especialista y del banco
 
 ## 7) Moneda y precios
 
