--- a/content/privacy/br.mdx
+++ b/content/privacy/br.mdx
@@ -6,7 +6,7 @@ Respeitamos sua privacidade. Explicamos de forma simples o que coletamos, por qu
 
 ## 1) Quem somos e nosso papel
 
-- A Eleva.care é um marketplace tecnológico em saúde. Conectamos clientes a profissionais independentes. Não somos provedor de saúde.
+- A Eleva.care é um plataforma confiável em saúde. Conectamos clientes a profissionais independentes. Não somos provedor de saúde.
 - Atuamos como:
   - Controlador para operações da plataforma (contas, agendamentos, pagamentos, suporte, analytics)
   - Operador para notas/arquivos clínicos criados por profissionais (eles são Controladores; nós armazenamos com segurança)
@@ -17,7 +17,7 @@ Respeitamos sua privacidade. Explicamos de forma simples o que coletamos, por qu
 - Dados de agendamentos: agendas, histórico, mensagens
 - Dados de pagamento: processados pela Stripe (não armazenamos cartões)
 - Dados de uso: dispositivo, IP, logs, analytics
-- Dados clínicos (quando aplicável): notas/arquivos criados pelo profissional e armazenados criptografados (o profissional controla o conteúdo)
+- Dados clínicos (quando aplicável): notas/arquivos criados pelo profissional e armazenados criptografados (o especialista controla o conteúdo)
 
 Cookies suportam funções essenciais e analytics. Você pode gerenciá‑los no navegador; alguns recursos podem não funcionar sem cookies.
 
@@ -47,7 +47,7 @@ Veja nosso [Acordo de Processamento de Dados](/legal/dpa) para a lista atual de 
 - Analytics: até 12 meses (depois agregado/anonimizado)
 - Logs de segurança: mínimo 12 meses
 - Backups: ~30 dias (criptografados)
-- Dados clínicos: conforme instruções do profissional e leis de saúde
+- Dados clínicos: conforme instruções do especialista e leis de saúde
 
 ## 6) Seus direitos
 
