--- a/content/privacy/en.mdx
+++ b/content/privacy/en.mdx
@@ -6,10 +6,10 @@ We respect your privacy and keep things simple. This page explains what we colle
 
 ## 1) Who we are and our role
 
-- Eleva.care is a healthcare technology marketplace. We connect clients with independent, licensed practitioners. We are not a healthcare provider.
+- Eleva.care is a healthcare technology platform. We connect clients with independent, licensed care experts. We are not a healthcare provider.
 - We act as:
   - Data Controller for platform operations (accounts, bookings, payments, support, analytics)
-  - Data Processor for clinical notes and files created by practitioners (they are the Controller; we provide secure storage)
+  - Data Processor for clinical notes and files created by experts (they are the Controller; we provide secure storage)
 
 ## 2) What we collect
 
@@ -17,7 +17,7 @@ We respect your privacy and keep things simple. This page explains what we colle
 - Booking data: schedules, history, messages
 - Payment data: processed by Stripe (we don’t store card data)
 - Usage data: device, IP, logs, analytics
-- Clinical data (when used): practitioner‑created notes/files stored encrypted (practitioner controls content)
+- Clinical data (when used): expert‑created notes/files stored encrypted (expert controls content)
 
 Cookies help essential features work and help us understand usage. You can manage cookies in your browser; some features may not work without them.
 
@@ -29,7 +29,7 @@ Cookies help essential features work and help us understand usage. You can manag
 - Communications you request or opt into
 - Legal obligations
 
-Legal bases include contract performance, legitimate interests (security, product improvement), consent (where required), and legal compliance. For clinical data, practitioners rely on healthcare bases (e.g., GDPR Art. 9(2)(h)); storage may also rely on your explicit consent.
+Legal bases include contract performance, legitimate interests (security, product improvement), consent (where required), and legal compliance. For clinical data, experts rely on healthcare bases (e.g., GDPR Art. 9(2)(h)); storage may also rely on your explicit consent.
 
 ## 4) Sharing
 
@@ -47,7 +47,7 @@ See our [Data Processing Agreement](/legal/dpa) for the current subprocessor lis
 - Analytics: up to 12 months (then aggregated/anonymized)
 - Security audit logs: at least 12 months
 - Backups: about 30 days (encrypted)
-- Clinical data: kept per practitioner instructions and applicable healthcare laws
+- Clinical data: kept per expert instructions and applicable healthcare laws
 
 ## 6) Your rights
 
