--- a/content/privacy/es.mdx
+++ b/content/privacy/es.mdx
@@ -6,7 +6,7 @@ Respetamos su privacidad y lo explicamos de forma simple. Qué recopilamos, por 
 
 ## 1) Quiénes somos y nuestro rol
 
-- Eleva.care es un marketplace tecnológico en salud. Conectamos clientes con profesionales independientes. No somos un proveedor de salud.
+- Eleva.care es un plataforma confiable en salud. Conectamos clientes con profesionales independientes. No somos un proveedor de salud.
 - Actuamos como:
   - Responsable del tratamiento para operaciones de plataforma (cuentas, reservas, pagos, soporte, analítica)
   - Encargado del tratamiento para notas/archivos clínicos creados por profesionales (ellos son Responsables; nosotros almacenamos de forma segura)
@@ -17,7 +17,7 @@ Respetamos su privacidad y lo explicamos de forma simple. Qué recopilamos, por 
 - Datos de reservas: agendas, historial, mensajes
 - Datos de pago: procesados por Stripe (no almacenamos tarjetas)
 - Datos de uso: dispositivo, IP, logs, analítica
-- Datos clínicos (cuando aplique): notas/archivos creados por el profesional y almacenados cifrados (el profesional controla el contenido)
+- Datos clínicos (cuando aplique): notas/archivos creados por el profesional y almacenados cifrados (el especialista controla el contenido)
 
 Las cookies permiten funciones esenciales y analítica. Puede gestionarlas en su navegador; algunas funciones podrían no funcionar sin cookies.
 
@@ -47,7 +47,7 @@ Vea nuestro [Acuerdo de Procesamiento de Datos](/legal/dpa) para la lista de sub
 - Analítica: hasta 12 meses (luego agregado/anonimizado)
 - Logs de seguridad: mínimo 12 meses
 - Backups: ~30 días (cifrados)
-- Datos clínicos: según instrucciones del profesional y leyes sanitarias
+- Datos clínicos: según instrucciones del especialista y leyes sanitarias
 
 ## 6) Sus derechos
 
