--- a/content/privacy/pt.mdx
+++ b/content/privacy/pt.mdx
@@ -6,7 +6,7 @@ Respeitamos a sua privacidade. Explicamos de forma simples o que recolhemos, por
 
 ## 1) Quem somos e o nosso papel
 
-- A Eleva.care é um marketplace tecnológico em saúde. Ligamos clientes a profissionais independentes. Não somos prestador de saúde.
+- A Eleva.care é um plataforma confiável em saúde. Ligamos clientes a profissionais independentes. Não somos prestador de saúde.
 - Atuamos como:
   - Responsável pelo tratamento para operações da plataforma (contas, marcações, pagamentos, suporte, analítica)
   - Subcontratante para notas/ficheiros clínicos criados por profissionais (eles são Responsáveis; nós armazenamos em segurança)
@@ -17,7 +17,7 @@ Respeitamos a sua privacidade. Explicamos de forma simples o que recolhemos, por
 - Dados de marcações: agendas, histórico, mensagens
 - Dados de pagamento: processados pelo Stripe (não guardamos cartões)
 - Dados de utilização: dispositivo, IP, registos, analítica
-- Dados clínicos (quando aplicável): notas/ficheiros criados pelo profissional e armazenados cifrados (o profissional controla o conteúdo)
+- Dados clínicos (quando aplicável): notas/ficheiros criados pelo profissional e armazenados cifrados (o especialista controla o conteúdo)
 
 Cookies suportam funcionalidades essenciais e analítica. Pode geri‑las no navegador; algumas funcionalidades podem não funcionar sem cookies.
 
@@ -47,7 +47,7 @@ Veja o nosso [Acordo de Processamento de Dados](/legal/dpa) para a lista atual d
 - Analítica: até 12 meses (depois agregado/anonimizado)
 - Registos de segurança: mínimo 12 meses
 - Backups: ~30 dias (cifrados)
-- Dados clínicos: conforme instruções do profissional e leis de saúde
+- Dados clínicos: conforme instruções do especialista e leis de saúde
 
 ## 6) Os seus direitos
 
