--- a/content/terms/en.mdx
+++ b/content/terms/en.mdx
@@ -4,18 +4,18 @@ _Effective Date:_ April 16, 2025
 
 Welcome to **Eleva.care** (operated by **Búzios e Tartarugas, Lda.**). By using Eleva.care, you agree to these Terms. Please read them carefully.
 
-## 1) What Eleva.care is (and isn’t)
+## 1) What Eleva.care is (and isn't)
 
-- Eleva.care is a technology marketplace that connects people seeking care with independent, licensed healthcare practitioners.
-- Eleva.care is not a clinic, medical practice, or healthcare provider. We don’t employ, supervise, or control practitioners, and we don’t provide medical advice, diagnosis, or treatment.
-- Practitioners are independent, licensed in their jurisdictions, hold their own professional liability insurance, and are solely responsible for the care they provide.
+- Eleva.care is a trusted platform that connects people seeking care with independent, licensed care experts.
+- Eleva.care is not a clinic, medical practice, or healthcare provider. We don't employ, supervise, or control experts, and we don't provide medical advice, diagnosis, or treatment.
+- Experts on Eleva Care are independent, licensed in their jurisdictions, hold their own professional liability insurance, and are solely responsible for the care they provide.
 
 ## 2) What we provide
 
 - Accounts, identity verification, and support
 - For clients: search and discovery, booking and scheduling, payments (via Stripe), secure messaging, and your appointment history
-- For practitioners: profile management, scheduling, encrypted notes (you control the content), payments and payouts (via Stripe Connect), secure client messaging, and encrypted file storage
-- We do not provide medical services or verify medical credentials beyond practitioner self‑certification
+- For experts: profile management, scheduling, encrypted notes (you control the content), payments and payouts (via Stripe Connect), secure client messaging, and encrypted file storage
+- We do not provide medical services or verify medical credentials beyond expert self‑certification
 
 Our features may change over time.
 
@@ -39,11 +39,11 @@ We may suspend or terminate access if these rules are violated.
 
 ## 5) Clients
 
-- You choose your practitioner and should check their credentials and licensing
-- Your care relationship is with the practitioner, not Eleva.care
-- Eleva.care isn’t responsible for the medical care you receive
+- You choose your expert and should check their credentials and licensing
+- Your care relationship is with the expert, not Eleva.care
+- Eleva.care isn't responsible for the medical care you receive
 
-## 6) Practitioners
+## 6) Experts
 
 By using Eleva.care, you represent and warrant that you:
 
@@ -71,8 +71,8 @@ The Eleva.care platform, including text, graphics, logos, and software, is owned
 
 To the fullest extent permitted by law:
 
-- We provide technology platform services “as is” and are responsible only for operating the platform
-- We are not responsible for any medical care, advice, diagnosis, treatment, outcomes, or disputes between you and a practitioner
+- We provide technology platform services "as is" and are responsible only for operating the platform
+- We are not responsible for any medical care, advice, diagnosis, treatment, outcomes, or disputes between you and an expert
 
 ### Emergencies
 
@@ -97,7 +97,7 @@ We may update these Terms. We’ll notify you of material changes; continuing to
 ## 15) EU consumer information
 
 - Your statutory consumer rights aren’t affected. You can use the European Commission’s Online Dispute Resolution platform: https://ec.europa.eu/consumers/odr
-- Right of withdrawal: Where applicable to certain non‑healthcare platform services, you may withdraw within 14 days unless you request immediate performance. For time‑specific healthcare services performed by independent practitioners, withdrawal may not apply once the service begins or for services scheduled for a specific date/time, as allowed by law.
+- Right of withdrawal: Where applicable to certain non‑healthcare platform services, you may withdraw within 14 days unless you request immediate performance. For time‑specific healthcare services performed by independent experts, withdrawal may not apply once the service begins or for services scheduled for a specific date/time, as allowed by law.
 
 ---
 
