--- a/content/terms/es.mdx
+++ b/content/terms/es.mdx
@@ -6,16 +6,16 @@ Bienvenido a **Eleva.care** (operado por **Búzios e Tartarugas, Lda.**). Al usa
 
 ## 1) Qué es Eleva.care (y qué no es)
 
-- Eleva.care es un marketplace tecnológico que conecta a personas que buscan atención con profesionales de salud independientes y licenciados.
-- Eleva.care no es una clínica ni un proveedor de salud. No empleamos, supervisamos ni controlamos a los profesionales, y no ofrecemos asesoramiento, diagnóstico ni tratamiento médico.
-- Los profesionales son independientes, licenciados en sus jurisdicciones, cuentan con su propio seguro de responsabilidad profesional y son los únicos responsables de la atención que brindan.
+- Eleva.care es un plataforma confiable que conecta a personas que buscan atención con especialistas independientes y licenciados.
+- Eleva.care no es una clínica ni un proveedor de salud. No empleamos, supervisamos ni controlamos a los especialistas, y no ofrecemos asesoramiento, diagnóstico ni tratamiento médico.
+- Los especialistas en Eleva Care son independientes, licenciados en sus jurisdicciones, cuentan con su propio seguro de responsabilidad profesional y son los únicos responsables de la atención que brindan.
 
 ## 2) Lo que ofrecemos
 
 - Cuentas, verificación de identidad y soporte
 - Para clientes: búsqueda y descubrimiento, reservas y agenda, pagos (vía Stripe), mensajería segura e historial de citas
-- Para profesionales: perfil, agenda, notas cifradas (usted controla el contenido), pagos y cobros (Stripe Connect), mensajería segura y archivos cifrados
-- No prestamos servicios médicos ni verificamos credenciales más allá de la autocertificación del profesional
+- Para especialistas: perfil, agenda, notas cifradas (usted controla el contenido), pagos y cobros (Stripe Connect), mensajería segura y archivos cifrados
+- No prestamos servicios médicos ni verificamos credenciales más allá de la autocertificación del especialista
 
 Nuestras funciones pueden cambiar con el tiempo.
 
@@ -32,18 +32,18 @@ Use Eleva.care de forma legal y respetuosa. No:
 - Cometa fraude o engañe a otros
 - Publique contenido dañino, ilegal o difamatorio
 - Interfiera con el funcionamiento normal de la plataforma
-- Se haga pasar por profesional licenciado si no lo es
+- Se haga pasar por especialista licenciado si no lo es
 - Use Eleva.care para emergencias
 
 Podemos suspender o terminar el acceso si se incumplen estas reglas.
 
 ## 5) Clientes
 
-- Usted elige a su profesional y debe verificar sus credenciales y licencias
-- Su relación de atención es con el profesional, no con Eleva.care
+- Usted elige a su especialista y debe verificar sus credenciales y licencias
+- Su relación de atención es con el especialista, no con Eleva.care
 - Eleva.care no es responsable de la atención médica que reciba
 
-## 6) Profesionales
+## 6) Especialistas
 
 Al usar Eleva.care, declara y garantiza que:
 
@@ -72,7 +72,7 @@ La plataforma Eleva.care (texto, gráficos, logotipos y software) pertenece a El
 En la máxima medida permitida por la ley:
 
 - Prestamos servicios tecnológicos “tal cual” y somos responsables solo del funcionamiento de la plataforma
-- No somos responsables de la atención médica, asesoramiento, diagnóstico, tratamiento, resultados ni disputas entre usted y el profesional
+- No somos responsables de la atención médica, asesoramiento, diagnóstico, tratamiento, resultados ni disputas entre usted y el especialista
 
 ### Emergencias
 
@@ -97,7 +97,7 @@ Podemos actualizar estos Términos. Avisaremos cambios materiales; seguir usando
 ## 15) Información para consumidores de la UE
 
 - Sus derechos legales no se ven afectados. Puede usar la plataforma ODR de la Comisión Europea: https://ec.europa.eu/consumers/odr
-- Derecho de desistimiento: cuando sea aplicable a ciertos servicios no sanitarios de la plataforma, puede desistir en 14 días salvo que solicite ejecución inmediata. Para servicios sanitarios en fecha/hora específica prestados por profesionales independientes, puede no aplicar una vez iniciado el servicio o para servicios con fecha/hora concreta, según la ley.
+- Derecho de desistimiento: cuando sea aplicable a ciertos servicios no sanitarios de la plataforma, puede desistir en 14 días salvo que solicite ejecución inmediata. Para servicios sanitarios en fecha/hora específica prestados por especialistas independientes, puede no aplicar una vez iniciado el servicio o para servicios con fecha/hora concreta, según la ley.
 
 ---
 
