--- a/content/terms/pt.mdx
+++ b/content/terms/pt.mdx
@@ -6,15 +6,15 @@ Bem‑vindo à **Eleva.care** (operada por **Búzios e Tartarugas, Lda.**). Ao u
 
 ## 1) O que é a Eleva.care (e o que não é)
 
-- A Eleva.care é um marketplace tecnológico que conecta pessoas a profissionais de saúde independentes e licenciados.
+- A Eleva.care é um plataforma confiável que conecta pessoas a especialistas independentes e licenciados.
 - A Eleva.care não é clínica nem prestador de saúde. Não empregamos, supervisionamos ou controlamos profissionais e não fornecemos aconselhamento, diagnóstico ou tratamento médico.
-- Os profissionais são independentes, licenciados nas suas jurisdições, mantêm seguro de responsabilidade profissional e são os únicos responsáveis pelos cuidados que prestam.
+- Os especialistas na Eleva Care são independentes, licenciados nas suas jurisdições, mantêm seguro de responsabilidade profissional e são os únicos responsáveis pelos cuidados que prestam.
 
 ## 2) O que oferecemos
 
 - Contas, verificação de identidade e suporte
 - Para clientes: pesquisa e descoberta, agendamento e marcações, pagamentos (Stripe), mensagens seguras e histórico
-- Para profissionais: perfil, agenda, notas cifradas (você controla o conteúdo), pagamentos e repasses (Stripe Connect), mensagens seguras e ficheiros cifrados
+- Para especialistas: perfil, agenda, notas cifradas (você controla o conteúdo), pagamentos e repasses (Stripe Connect), mensagens seguras e ficheiros cifrados
 - Não prestamos serviços médicos nem verificamos credenciais além da auto‑certificação do profissional
 
 As funcionalidades podem mudar ao longo do tempo.
@@ -32,18 +32,18 @@ Use a Eleva.care de forma legal e respeitosa. Não:
 - cometa fraude ou engane outras pessoas
 - publique conteúdo ilegal, difamatório ou prejudicial
 - interfira com o funcionamento normal da plataforma
-- declare ser profissional licenciado se não o for
+- declare ser especialista licenciado se não o for
 - use a Eleva.care para emergências
 
 Podemos suspender ou encerrar o acesso em caso de violação.
 
 ## 5) Clientes
 
-- Você escolhe o seu profissional e deve verificar credenciais e licenças
-- A relação de cuidados é com o profissional, não com a Eleva.care
+- Você escolhe o seu especialista e deve verificar credenciais e licenças
+- A relação de cuidados é com o especialista, não com a Eleva.care
 - A Eleva.care não é responsável pelos cuidados recebidos
 
-## 6) Profissionais
+## 6) Especialistas
 
 Ao usar a Eleva.care, você declara e garante que:
 
@@ -72,7 +72,7 @@ A plataforma Eleva.care (texto, gráficos, logótipos e software) pertence à El
 Na máxima medida permitida por lei:
 
 - prestamos serviços tecnológicos “no estado em que se encontram” e somos responsáveis apenas pela operação da plataforma
-- não somos responsáveis por cuidados médicos, aconselhamento, diagnóstico, tratamento, resultados ou disputas entre você e o profissional
+- não somos responsáveis por cuidados médicos, aconselhamento, diagnóstico, tratamento, resultados ou disputas entre você e o especialista
 
 ### Emergências
 
