--- a/content/payment-policies/en.mdx
+++ b/content/payment-policies/en.mdx
@@ -6,12 +6,12 @@ This page explains how payments work on Eleva.care in plain language.
 
 ## 1) What you’re paying for
 
-- Eleva.care is a technology marketplace. Payments go to independent, licensed practitioners for their services.
+- Eleva.care is a trusted platform. Payments go to independent, licensed care experts for their services.
 - Pricing shown at booking includes everything (no hidden fees):
-  - Practitioner receives 85% of the appointment price
+  - Expert receives 85% of the appointment price
   - Eleva.care retains 15% as a platform fee (covers tech, infra, support, marketing, Stripe fees)
 
-Example for €100: Practitioner €85, Platform fee €15.
+Example for €100: Expert €85, Platform fee €15.
 
 ## 2) Payment methods
 
@@ -25,7 +25,7 @@ Example for €100: Practitioner €85, Platform fee €15.
 - You have 7 full days to complete payment
 - We’ll send reminders on day 3 and day 6 with instructions (ATM, online banking, MB WAY)
 
-Late Multibanco payments (after 7 days): If the slot is no longer available or violates practitioner rules, we automatically refund 90% and retain a 10% processing fee.
+Late Multibanco payments (after 7 days): If the slot is no longer available or violates expert rules, we automatically refund 90% and retain a 10% processing fee.
 
 ## 4) Refunds for conflicts (late Multibanco)
 
@@ -42,11 +42,11 @@ If something went wrong (system error or edge case), contact support within 48 h
 - Multibanco (7‑day window):
   - Best for bookings 8+ days ahead, local PT preference, comfortable with deferred payment
 
-## 6) Practitioner payouts (Stripe Connect)
+## 6) Expert payouts (Stripe Connect)
 
-- Practitioners are independent and are paid via Stripe Connect after successful appointments
-- Standard split: 85% practitioner / 15% platform
-- Payout timing depends on practitioner settings and local bank rules
+- Experts are independent and are paid via Stripe Connect after successful appointments
+- Standard split: 85% expert / 15% platform
+- Payout timing depends on expert settings and local bank rules
 
 ## 7) Currency and pricing
 
