--- a/content/terms/br.mdx
+++ b/content/terms/br.mdx
@@ -6,7 +6,7 @@ Bem‑vindo à **Eleva.care** (operada por **Búzios e Tartarugas, Lda.**). Ao u
 
 ## 1) O que é a Eleva.care (e o que não é)
 
-- Marketplace tecnológico que conecta pessoas a profissionais de saúde independentes e licenciados.
+- Marketplace tecnológico que conecta pessoas a especialistas independentes e licenciados.
 - Não somos clínica nem prestador de saúde. Não empregamos, supervisionamos ou controlamos profissionais e não oferecemos aconselhamento, diagnóstico ou tratamento médico.
 - Profissionais são independentes, licenciados em suas jurisdições, mantêm seguro de responsabilidade profissional e são os únicos responsáveis pelos cuidados que prestam.
 
@@ -14,7 +14,7 @@ Bem‑vindo à **Eleva.care** (operada por **Búzios e Tartarugas, Lda.**). Ao u
 
 - Contas, verificação de identidade e suporte
 - Para clientes: busca e descoberta, agendamentos e reservas, pagamentos (Stripe), mensagens seguras e histórico
-- Para profissionais: perfil, agenda, notas criptografadas (você controla o conteúdo), pagamentos e repasses (Stripe Connect), mensagens seguras e arquivos criptografados
+- Para especialistas: perfil, agenda, notas criptografadas (você controla o conteúdo), pagamentos e repasses (Stripe Connect), mensagens seguras e arquivos criptografados
 - Não prestamos serviços médicos nem verificamos credenciais além da auto‑certificação do profissional
 
 As funcionalidades podem mudar ao longo do tempo.
@@ -32,7 +32,7 @@ Use a Eleva.care de forma legal e respeitosa. Não:
 - cometa fraude ou engane outras pessoas
 - publique conteúdo ilegal, difamatório ou prejudicial
 - interfira com o funcionamento normal da plataforma
-- declare ser profissional licenciado se não for
+- declare ser especialista licenciado se não for
 - use a Eleva.care para emergências
 
 Podemos suspender ou encerrar o acesso em caso de violação.
@@ -40,10 +40,10 @@ Podemos suspender ou encerrar o acesso em caso de violação.
 ## 5) Clientes
 
 - Você escolhe seu profissional e deve verificar credenciais e licenças
-- A relação de cuidados é com o profissional, não com a Eleva.care
+- A relação de cuidados é com o especialista, não com a Eleva.care
 - A Eleva.care não é responsável pelos cuidados que você recebe
 
-## 6) Profissionais
+## 6) Especialistas
 
 Ao usar a Eleva.care, você declara e garante que:
 
@@ -72,7 +72,7 @@ A plataforma Eleva.care (texto, gráficos, logotipos e software) pertence à Ele
 Na máxima medida permitida por lei:
 
 - prestamos serviços tecnológicos “no estado em que se encontram” e somos responsáveis apenas pela operação da plataforma
-- não somos responsáveis por cuidados médicos, aconselhamento, diagnóstico, tratamento, resultados ou disputas entre você e o profissional
+- não somos responsáveis por cuidados médicos, aconselhamento, diagnóstico, tratamento, resultados ou disputas entre você e o especialista
 
 ### Emergências
 
